I created test file for feature scenarios.

--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,18 @@
       <artifactId>cucumber-testng</artifactId>
       <version>6.9.1</version>
     </dependency>
+    <dependency>
+      <groupId>com.aventstack</groupId>
+      <artifactId>extentreports</artifactId>
+      <version>4.0.9</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.google.code.findbugs</groupId>
+      <artifactId>jsr305</artifactId>
+      <version>3.0.2</version>
+      <scope>test</scope>
+    </dependency>
 
 
   </dependencies>
